[gd_scene load_steps=5 format=3 uid="uid://dau1bkrr50lsn"]

[ext_resource type="Script" path="res://Source/Level/SelectMenu.gd" id="1_16202"]
[ext_resource type="Texture2D" uid="uid://c6rnd5oue7i65" path="res://Assets/Object/World/Board.png" id="1_cg4bx"]

[sub_resource type="LabelSettings" id="LabelSettings_18gmu"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jvlr2"]
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="SelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_16202")

[node name="Background" type="Control" parent="."]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.109804, 0.137255, 1)

[node name="Board" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -172.0
offset_right = 168.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_cg4bx")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 224.0
offset_right = 354.0
offset_bottom = 255.0
focus_mode = 0
text = "Start"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 264.0
offset_right = 354.0
offset_bottom = 295.0
focus_mode = 0
text = "Quit"

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 298.0
offset_top = 187.0
offset_right = 342.0
offset_bottom = 229.0
focus_mode = 0

[node name="Label" type="Label" parent="CheckButton"]
layout_mode = 0
offset_left = -62.0
offset_top = -21.0
offset_right = 106.0
offset_bottom = 21.0
text = "Black Player"
label_settings = SubResource("LabelSettings_18gmu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 108.0
offset_right = 488.0
offset_bottom = 136.0
text = "Player Won!"
label_settings = SubResource("LabelSettings_jvlr2")
horizontal_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
